--- a/styles.css
+++ b/styles.css
@@ -62,49 +62,6 @@ h3 {
 
     border-radius: 50%;
     background: #F2D648;
+    /* background-image: url("./images/pac-man.png"); */
     position: relative;
-    
-
-    &__eye {
-        position: absolute;
-        width: 3px;
-        height: 3px;
-        border-radius: 50%;
-        top: 6px;
-        right: 11px;
-        background: #333333;
-      }
-      
-      &__mouth {
-        background: #000;
-        position: absolute;
-        width: 100%;
-        height: 100%;
-        clip-path: polygon(100% 74%, 44% 48%, 100% 21%);
-        animation-name: eat;
-        animation-duration: 0.7s;
-        animation-iteration-count: infinite;
-      }
 }
-
-@keyframes eat {
-    0% {
-      clip-path: polygon(100% 74%, 44% 48%, 100% 21%);
-    }
-    25% {
-      clip-path: polygon(100% 60%, 44% 48%, 100% 40%);
-    }
-    
-    50% {
-      clip-path: polygon(100% 50%, 44% 48%, 100% 50%);
-    }
-    
-    75% {
-     clip-path: polygon(100% 59%, 44% 48%, 100% 35%);
-    }
-    
-    100% {
-     clip-path: polygon(100% 74%, 44% 48%, 100% 21%);
-    }
-  }
-
