--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,6 @@ html {
     flex-wrap: wrap;
     width: 560px;
     height: 560px;
-    
     border: solid #FFFF00;
     background-color: rgb(0, 0, 0);
     margin-left: 50px;
@@ -32,10 +31,11 @@ h3 {
     font-size: 30px;
 }
 
-#flex {
+#flexbox {
     display: flex;
     justify-content: space-around;
-    margin: 0 50px;
+    flex-flow: row nowrap;
+    margin: 50px 50px;
 }
     
 .grid div {
